Match-id-8f3465c5779280f8a7f852abcbb7ab0c38b6ecaa

--- a/api/external/api-protect-agent.yaml
+++ b/api/external/api-protect-agent.yaml
@@ -1095,11 +1095,11 @@ definitions:
     type: object
     description: lan-free 请求结构体
     required:
-      - isDelete
+      - delete
       - wwpns
       - fcPorts
     properties:
-      isDelete:
+      delete:
         type: boolean
         description: 是否删除lan-free
       wwpns:
